--- a/css/styles.css
+++ b/css/styles.css
@@ -10946,7 +10946,8 @@ section {
 section.cta {
   position: relative;
   padding: 15rem 0;
-  background-image: url("https://source.unsplash.com/5g41N3uRPf8/1500x800");
+  /**background-image: url("https://source.unsplash.com/5g41N3uRPf8/1500x800");**/
+  background-image: url("https://images.unsplash.com/photo-1620912189865-1e8a33da4c5e?q=80&w=2338&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
   background-position: center;
   background-size: cover;
 }
